--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Pranavam Cyber Cafe</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body id="page-top">
+<!DOCTYPE html>	<!DOCTYPE html>
+<html lang="en">	<html lang="en">
+<head>	    <head>
+    <meta charset="UTF-8">	        <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">	        
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">	        
+    <meta name="description" content="" />
+    <title>Dev.com</title>	        
+    <meta name="author" content="" />
+    <link rel="stylesheet" href="style.css" type="text/css">	        
+    <title>Pranavam Cyber Cafe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">	        
+    <!-- Favicon-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>	        
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Playfair+Display&display=swap" rel="stylesheet">	        <!-- Font Awesome icons (free version)-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">	        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>	        <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Playfair+Display&family=Rajdhani:wght@300&display=swap" rel="stylesheet">	        
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <link href="css/styles.css" rel="stylesheet" />
+    </head>	        <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <body>	
+    <div class="container">	        
+        <h1 class="logo"> Dev. <span style="font-size: 35px;">com</span> </h1>	    </head>
+        <h2 class="we">We are a <span class="creative">creative</span> <br> designing agency</h2>	    <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container navbar-brandlogo">
@@ -30,9 +39,10 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
 
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+
+        <div class="left card">	                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+            <img class="beauty" src="assets/images/beautiful.jpg" alt="">	                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+            <h3><span class="h_beauty"><b>beauty</b> </span><br> We strive to create the most beautiful websites for all your needs. Working closely with you to design and develop an amazing website for your business.</h3>	                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -54,7 +64,7 @@
                 <div class="row text-center service-text">
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
-                            
+
                             <i class="fas fa-laptop fa-stack-1x fa-inverse" style="color: #ffc800"></i>
                         </span>
                         <h4 class="my-3">Computer Networking Service</h4>
@@ -81,7 +91,7 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- About-->
         <section class="page-section" id="about">
             <div class="container">
@@ -187,6 +197,9 @@
           </div>
 
 
+        </div>	
+
+
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>        <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
@@ -197,4 +210,20 @@
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
+
+
+        <div class="right card">	
+            <img src="assets/images/construction.jpg" alt="" class="const">	
+            <h3><span class="h_const"><b>Construction</b> </span><br> Built by our team of professional developers, we ensure the most rigourous and modern websites. Built from scratch using HTML and CSS. Only the best for you.</h3>	
+
+
+        </div>	
+    </div>	
+<footer>	
+    <h4>Made with <span style="color: red;">❤</span> Dev.com</h4>	
+</footer>	
+
+</body>	
+</html>	
+0 comments on commit 5eabf0c
 
