--- a/index.html
+++ b/index.html
@@ -1,229 +1,38 @@
-<!DOCTYPE html>	<!DOCTYPE html>
-<html lang="en">	<html lang="en">
-<head>	    <head>
-    <meta charset="UTF-8">	        <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">	        
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">	        
-    <meta name="description" content="" />
-    <title>Dev.com</title>	        
-    <meta name="author" content="" />
-    <link rel="stylesheet" href="style.css" type="text/css">	        
-    <title>Pranavam Cyber Cafe</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">	        
-    <!-- Favicon-->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>	        
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Playfair+Display&display=swap" rel="stylesheet">	        <!-- Font Awesome icons (free version)-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">	        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>	        <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Playfair+Display&family=Rajdhani:wght@300&display=swap" rel="stylesheet">	        
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-    <link href="css/styles.css" rel="stylesheet" />
-    </head>	        <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <body>	
-    <div class="container">	        
-        <h1 class="logo"> Dev. <span style="font-size: 35px;">com</span> </h1>	    </head>
-        <h2 class="we">We are a <span class="creative">creative</span> <br> designing agency</h2>	    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-            <div class="container navbar-brandlogo">
-                <a class="navbar-brand brand-name" href="#page-top"><img class="" src="assets/img/logo.png" alt="navbar-logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars ms-1"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit&family=Playfair+Display&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit&family=Playfair+Display&family=Rajdhani:wght@300&display=swap" rel="stylesheet">
+
+</head>
+<body>
+    <div class="container">
+        <h1 class="logo"> Dev. <span style="font-size: 35px;">com</span> </h1>
+        <h2 class="we">We are a <span class="creative">creative</span> <br> designing agency</h2>
+        <div class="left card">
+            <img class="beauty" src="assets/images/beautiful.jpg" alt="">
+            <h3><span class="h_beauty"><b>beauty</b> </span><br> We strive to create the most beautiful websites for all your needs. Working closely with you to design and develop an amazing website for your business.</h3>
+         </div>
+
+        <div class="right card">
+            <img src="assets/images/construction.jpg" alt="" class="const">
+            <h3><span class="h_const"><b>Construction</b> </span><br> Built by our team of professional developers, we ensure the most rigourous and modern websites. Built from scratch using HTML and CSS. Only the best for you.</h3>
 
 
-        <div class="left card">	                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-            <img class="beauty" src="assets/images/beautiful.jpg" alt="">	                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-            <h3><span class="h_beauty"><b>beauty</b> </span><br> We strive to create the most beautiful websites for all your needs. Working closely with you to design and develop an amazing website for your business.</h3>	                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- Masthead-->
-        <header class="masthead">
-            <div class="container">
-                <div class="masthead-heading text-uppercase">Welcome!<br><span>Pranavam Graphics Here</span></div>
-                <a class="btn btn-primary btn-xl text-uppercase tell-btn" href="#services">Tell Me More</a>
-            </div>
-        </header>
-        <!-- Services-->
-        <section class="page-section" id="services">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Elevating Your Experience: Our Diverse Range of Services.</h3>
-                </div>
-                <div class="row text-center service-text">
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
+        </div>
+    </div>
+<footer>
+    <h4>Made with <span style="color: red;">❤</span> Dev.com</h4>
+</footer>
 
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse" style="color: #ffc800"></i>
-                        </span>
-                        <h4 class="my-3">Computer Networking Service</h4>
-                        <p class="text">Unlock Seamless Online Performance with Pranavam Graphics' Networking Expertise. We streamline your online applications for smooth communication and efficiency. Elevate your digital experience today.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i><svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="#ffc800" class="bi bi-trophy-fill" viewBox="0 0 16 16">
-                                <path d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5c0 .538-.012 1.05-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33.076 33.076 0 0 1 2.5.5zm.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935zm10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935z"/>
-                              </svg></i>  
-                        </span>
-                        <h4 class="my-3">Custom Momentum</h4>
-                        <p class="text">Introducing Custom Momentum: Where memories find form. Our personalized mementos carry your unique story. Crafted with care, treasured forever. Celebrate life's moments, beautifully engraved.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i><svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="#ffc800" class="bi bi-postcard-heart-fill" viewBox="0 0 16 16">
-                                <path d="M2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2Zm6 2.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0Zm3.5.878c1.482-1.42 4.795 1.392 0 4.622-4.795-3.23-1.482-6.043 0-4.622ZM2 5.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5Zm0 2a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5Zm0 2a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5Z"/>
-                              </svg></i>
-                        </span>
-                        <h4 class="my-3">Wedding Cards</h4>
-                        <p class="text">Pranavam Graphics: Crafting Love on Paper. Tailored designs, premium quality, and a personal touch bring your journey to life. Elevate your special day with our wedding card artistry.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- About-->
-        <section class="page-section" id="about">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Elevating Your Experience: Our Diverse Range of Services</h3>
-                </div>
-                <ul class="timeline">
-                    <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>December 2015</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>July 2020</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <h4>
-                                Be Part
-                                <br />
-                                Of Our
-                                <br />
-                                Story!
-                            </h4>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <!-- Team-->
-        <section class="page-section bg-light" id="team">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Introducing the Visionary</h2>
-                </div>
-                <div class="team">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/4.jpg" alt="..." />
-                            <h4>Sanal Mundakai</h4>
-                            <p class="text-muted">Owner</p>
-                            <a class="btn btn-dark btn-social mx-2" href="https://wa.me/+919567377302" aria-label="fa-whatsapp"><i class="fab fa-whatsapp"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/csanuc" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="mailto:pranavambvk@gmail.com" aria-label="Gmail"><i class="fas fa-envelope"></i></a>
-                        </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Connect personally, explore insights, and collaborate through the provided contact details. Discover their journey on social media. For shop-related matters, visit our dedicated contact platform for assistance.</p></div>
-                </div>
-            </div>
-        </section>
-        <!-- Contact-->
-        <section class="page-section" id="contact">
-            <div class="container">
-                <div class="text-center contact-address">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted custom-text-color">City centre, Bovikanam<br>Kasaragod, Pin Code : 671542 <br><br>+919567377302<br></h3>
-                    <a class="btn btn-dark btn-social mx-2" href="https://wa.me/+919567377302" aria-label="fa-whatsapp"><i class="fab fa-whatsapp"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/csanuc" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="mailto:pranavambvk@gmail.com" aria-label="Gmail"><i class="fas fa-envelope"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="tel:+919567377302" aria-label="fa-phone"><i class="fas fa-phone"></i></a>                  
-                </div>
-            </div>
-        </section>
-        <!-- Footer-->
-        <div class="container">
-            <footer class="py-3 my-4">
-                <p class="text-center text-body-secondary">©Pranavam 2023</p>
-                <p class="text-center text-body-secondary developer">Made with 🖤 <a  href="https://wa.me/919207518115">SarathA9</a></p>
-            </footer>
-          </div>
-
-
-        </div>	
-
-
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    </body>
+</body>
 </html>
-
-
-        <div class="right card">	
-            <img src="assets/images/construction.jpg" alt="" class="const">	
-            <h3><span class="h_const"><b>Construction</b> </span><br> Built by our team of professional developers, we ensure the most rigourous and modern websites. Built from scratch using HTML and CSS. Only the best for you.</h3>	
-
-
-        </div>	
-    </div>	
-<footer>	
-    <h4>Made with <span style="color: red;">❤</span> Dev.com</h4>	
-</footer>	
-
-</body>	
-</html>	
-0 comments on commit 5eabf0c
-
